--- a/src/pug/layouts/page-layout/_foot.pug
+++ b/src/pug/layouts/page-layout/_foot.pug
@@ -2,6 +2,8 @@ script(src="libs/jquery/jquery.min.js")
 script(src="libs/jquery-custom-scrollbar/jquery.custom-scrollbar.js")
 script(src="libs/jquery.nicescroll.js")
 
+
+
 //- script(src="libs/custom-scroll/jquery.custom-scroll.js")
 
 block scripts
@@ -17,5 +19,7 @@ script(src="js/button-file.js")
 script(src="js/products-table.js")
 script(src="js/profile-menu.js")
 script(src="js/fix-ie.js")
+script(src="js/drop-down.js")
+
 	
 script(defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js")
