--- a/src/less/blocks/_drop-down.less
+++ b/src/less/blocks/_drop-down.less
@@ -99,14 +99,6 @@
 	padding: 5px;
 	transition: all 0.5s ease;
 	float: left;
-	a {
-		&:hover {
-			color: @red;
-			text-decoration: none;
-			border-bottom: 1px solid @red;
-			padding-bottom: 3px;
-		}
-	}
 }
 
 .dropcontainer ul li:hover {
@@ -129,6 +121,18 @@
 	height: auto;
 	color: @text-light-grey;
 	position: absolute;
+	li {
+		width: 100%;
+	}
+	li a {
+		float: left;
+			&:hover {
+		color: @red;
+			text-decoration: none;
+			border-bottom: 1px solid @red;
+			padding-bottom: 3px;
+		}
+	}
 }
 
 .activeDropDown {
