Изменено поведение по ховер
Теперь при наведении на лишку, так же происходит подчеркивание

--- a/src/less/blocks/_drop-down.less
+++ b/src/less/blocks/_drop-down.less
@@ -123,15 +123,15 @@
 	position: absolute;
 	li {
 		width: 100%;
-	}
-	li a {
-		float: left;
-			&:hover {
-		color: @red;
+		&:hover a {
+			color: @red;
 			text-decoration: none;
 			border-bottom: 1px solid @red;
 			padding-bottom: 3px;
 		}
+	}
+	li a {
+		float: left;
 	}
 }
 
