Поправила отображение выпадающего списка в ui-kit

--- a/src/less/blocks/_drop-down.less
+++ b/src/less/blocks/_drop-down.less
@@ -68,7 +68,6 @@
 	position: relative;
 	display: block;
 	font-size: 16px;
-	width: 175px;
 	transition: all 0.5s ease;
 	&:hover{
 		text-decoration: none;
@@ -78,7 +77,6 @@
 .activetrigger {
 	font-size: 16px;
 	display: block;
-	width: 175px;
 	&:hover, &:active {
 		text-decoration: none;
 	}
@@ -121,6 +119,7 @@
 	height: auto;
 	color: @text-light-grey;
 	position: absolute;
+	right: -20px;
 	li {
 		width: 100%;
 		&:hover a {
