--- a/src/pug/pages/ui/drop-down.pug
+++ b/src/pug/pages/ui/drop-down.pug
@@ -16,7 +16,7 @@ block content
 			//- 		.drop-down-item Новинки
 			//- 		.drop-down-item По возрастанию цены
 			//- 		.drop-down-item По убыванию цены
-			form.drop-down#drop-down(action='#')
+			form.drop-down#drop-down(action='#' style="margin-right: 20px;")
 				#drop-down-check.drop-down-check.menu-icon
 				select.turnintodropdown#turnintodropdown
 					option По возрастанию цены
