фикс отступа от края экрана до выпадающего списка

--- a/src/less/blocks/_drop-down.less
+++ b/src/less/blocks/_drop-down.less
@@ -6,6 +6,7 @@
 	color: @text-light-grey;
 	cursor: pointer;
 	z-index: 10;
+	margin-right: 10px;
 	a {
 		color: @text-light-grey;
 		// width: 184px;
