фикс пропадания первого элемента в ui

--- a/src/pug/pages/ui/drop-down.pug
+++ b/src/pug/pages/ui/drop-down.pug
@@ -20,6 +20,7 @@ block content
 				#drop-down-check.drop-down-check.menu-icon
 				select.turnintodropdown#turnintodropdown
 					option По возрастанию цены
+					option По возрастанию цены
 					option По популярности
 					option Новинки
 					option По убыванию цены
