--- a/src/pug/mixins/_filter-menu.pug
+++ b/src/pug/mixins/_filter-menu.pug
@@ -21,5 +21,5 @@ mixin  filter-menu-checkbox (text)
 mixin  filter-color-checkbox (imgSrc, titleText)
 	label.label-color-checkbox
 		input(type='checkbox')
-		.filter-color-checkbox
-			img(src="../img/good_colors/"+ imgSrc, alt="color" title=""+ titleText)
+		.filter-color-checkbox(title=""+ titleText)
+			img(src="../img/good_colors/"+ imgSrc, alt="color" )
